user animation section

--- a/medp341-midterm/app/dev/landingPage.html
+++ b/medp341-midterm/app/dev/landingPage.html
@@ -10,7 +10,6 @@
    src="https://code.jquery.com/jquery-3.4.0.min.js"
    integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg="
    crossorigin="anonymous"></script>
-   <script src="/scripts/index.js"></script>
 
    <link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
 
@@ -19,8 +18,6 @@
    src="https://code.jquery.com/jquery-3.4.0.min.js"
    integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg="
    crossorigin="anonymous"></script>
-
-   <script src="/scripts/index.js"></script>
    
    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.min.js"
    integrity="sha256-GDuv15eqQpLqWvLkRnd+EvvsHLngEUnerY5BDSYfLuM="
@@ -32,6 +29,9 @@
 
    <script src="https://unpkg.com/ml5@0.1.3/dist/ml5.min.js"></script>
 
+
+   <script src="/scripts/flock.js"></script>
+   <script src="/scripts/index.js"></script>
    
    <link rel="stylesheet" href="/css/home.css">
 
