user animation section for each affected country

--- a/medp341-midterm/app/dev/australia.html
+++ b/medp341-midterm/app/dev/australia.html
@@ -38,7 +38,7 @@
 </head>
 <body>
    <div class="container" >
-       <a href="./">Home</a>
+       <a href="/">Home</a>
       <h1>Landing page test</h1>
    </div>
 </body>
