--- a/medp341-midterm/app/dev/index.html
+++ b/medp341-midterm/app/dev/index.html
@@ -12,7 +12,7 @@
 <body>
    <div class="container" >
       <h1>Climate Change</h1>
-      <a href="./landingPage.html">Go to a page</a>
+      <a href="/congo.html">Go to a page</a>
    </div>
 </body>
 </html>
