api data gets displya according to user input

--- a/medp341-midterm/app/dev/index.html
+++ b/medp341-midterm/app/dev/index.html
@@ -5,7 +5,15 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <title>Climate Change</title>
-   
+
+   <script
+   src="https://code.jquery.com/jquery-3.4.0.min.js"
+   integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg="
+   crossorigin="anonymous"></script>
+
+   <script src="/scripts/climateAPI.js"></script>
+
+
    <link rel="stylesheet" href="/css/home.css">
 
 </head>
@@ -13,6 +21,24 @@
    <div class="container" >
       <h1>Climate Change</h1>
       <a href="/congo.html">Go to a page</a>
+
+      <!-- <div class="">
+         <form name="apiForm" id="apiForm">
+            <select class="timeBtn" name="year">
+               <option value="past1">1920 - 1939</option>
+               <option value="past2">1940 - 1959</option>
+               <option value="past3">1960 - 1979</option>
+               <option value="past4">1980 - 1999</option>
+               <option value="future1">2020 - 2039</option>
+               <option value="future2">2040 - 2059</option>
+               <option value="future3">2060 - 2079</option>
+               <option value="future4">2080 - 2099</option>
+            </select>
+            <input type="button" value="Go" class="inputbtn" onClick="handleForm()">
+         </form>
+      </div> -->
+
+      
    </div>
 </body>
 </html>
