--- a/medp341-midterm/app/dev/congo.html
+++ b/medp341-midterm/app/dev/congo.html
@@ -29,9 +29,12 @@
 
    <script src="https://unpkg.com/ml5@0.1.3/dist/ml5.min.js"></script>
 
-
+<!-- 
    <script src="/scripts/flock.js"></script>
-   <script src="/scripts/index.js"></script>
+   <script src="/scripts/index.js"></script> -->
+   <script src="/scripts/climateAPI.js"></script>
+
+
    
    <link rel="stylesheet" href="/css/home.css">
 
@@ -40,6 +43,32 @@
    <div class="container" >
        <a href="/">Home</a>
       <h1>Landing page test</h1>
+
+
+      <div class="">
+         <form name="apiForm" id="apiForm">
+            <select class="timeBtn" name="year">
+               <option value="past1">1920 - 1939</option>
+               <option value="past2">1940 - 1959</option>
+               <option value="past3">1960 - 1979</option>
+               <option value="past4">1980 - 1999</option>
+               <option value="future1">2020 - 2039</option>
+               <option value="future2">2040 - 2059</option>
+               <option value="future3">2060 - 2079</option>
+               <option value="future4">2080 - 2099</option>
+            </select>
+            <input type="button" value="Go" class="inputbtn" onClick="handleForm()">
+         </form>
+      </div>
+
+      <div id="temperature-container">
+         <h4 id="title-time-period"></h4>
+         <p id="time-period-info"></p>
+         <p id="time-period-avg"></p>
+         <ul id="temperature-data">
+
+         </ul>
+      </div>
    </div>
 </body>
 </html>
