--- a/medp341-midterm/app/dev/congo.html
+++ b/medp341-midterm/app/dev/congo.html
@@ -29,9 +29,9 @@
 
    <script src="https://unpkg.com/ml5@0.1.3/dist/ml5.min.js"></script>
 
-<!-- 
+
    <script src="/scripts/flock.js"></script>
-   <script src="/scripts/index.js"></script> -->
+   <script src="/scripts/index.js"></script>
    <script src="/scripts/climateAPI.js"></script>
 
 
