--- a/medp341-midterm/app/dev/html/countries-affected.html
+++ b/medp341-midterm/app/dev/html/countries-affected.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<title>Countries Affected</title>
-	<link rel="stylesheet" href="../styles/style.css">
+	<link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 	<h1 id="header">THE CLIMATE PHENOMENON</h1>
