added content to what to do page

--- a/medp341-midterm/app/dev/html/what-to-do.html
+++ b/medp341-midterm/app/dev/html/what-to-do.html
@@ -4,9 +4,31 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<title>What Can You Do?</title>
-	<link rel="stylesheet" href="">
+	<link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-	
+	<h1 id="header">THE CLIMATE PHENOMENON</h1>
+	<h2>WHAT CAN YOU DO?</h2>
+	<p></p>
+	<div class="flex-container">
+		<div class="box">
+			<h4> Keep yourself and others educated</h4> 
+			<p>It is important to stay up to date with what is happening with climate change and to stay far away from shows, personalities, and companies that constantly rebuke climate change is real. Moreover, it is vital to try to educate others on the causes and consequences of climate change. Try watching documentaries, reading books/journals, and utilizing tools that NASA and other organizations provide. </p>
+		</div>
+		<div class="box">
+			
+		</div>
+		
+	</div>
+	<div class="flex-container">
+		<div class="box">
+			<h4>Donate to Organizations </h4>
+			<p>So you might not be able to cut back and make all the necessary changes. But, you can donate to organizations that are putting up the bigger fight. This is certainly not a “freebie” card, but just another tool in your toolbox to fight against climate change. Consider donating to World Wildlife Fund, the Sierra Club, Global Footprint Network, etc. </p>
+		</div>
+		<div class="box">
+			
+		</div>
+		
+	</div>
 </body>
 </html>
