added more content + updated class name

--- a/medp341-midterm/app/dev/html/what-to-do.html
+++ b/medp341-midterm/app/dev/html/what-to-do.html
@@ -11,22 +11,23 @@
 	<h2>WHAT CAN YOU DO?</h2>
 	<p></p>
 	<div class="flex-container">
-		<div class="box">
-			<h4> Keep yourself and others educated</h4> 
+		<div class="box-content">
+			<h3> Keep yourself and others educated</h3> 
 			<p>It is important to stay up to date with what is happening with climate change and to stay far away from shows, personalities, and companies that constantly rebuke climate change is real. Moreover, it is vital to try to educate others on the causes and consequences of climate change. Try watching documentaries, reading books/journals, and utilizing tools that NASA and other organizations provide. </p>
 		</div>
-		<div class="box">
-			
+		<div class="box-content">
+			<h3>Throw Way Less</h3>
+			<p> Metals, glass, paper, and plastic can be recycled. These products are not biodegradable, so can remain in landfills for centuries , all while emitting greenhouse gases. Moreover, the energy that goes into manufacturing products like plastic goes to no use if simply discarded in landfills. Recycling allows to save natural resources: recycled office paper saves 17 tress, 7,000 gallons of water, 463 gallons of oil; recycled plastic saves 16.3 barrels of oil.</p>
 		</div>
-		
 	</div>
 	<div class="flex-container">
-		<div class="box">
-			<h4>Donate to Organizations </h4>
+		<div class="box-content">
+			<h3>Donate to Organizations </h3>
 			<p>So you might not be able to cut back and make all the necessary changes. But, you can donate to organizations that are putting up the bigger fight. This is certainly not a “freebie” card, but just another tool in your toolbox to fight against climate change. Consider donating to World Wildlife Fund, the Sierra Club, Global Footprint Network, etc. </p>
 		</div>
-		<div class="box">
-			
+		<div class="box-content">
+			<h3>Reduce your Carbon Footprint</h3>
+			<p>A carbon footprint is basically the total greenhouse gases produced indirectly or directly by someone or something. So as individuals, based on what we do and consume, we have a carbon footprint. Driving less (taking public transportation, biking, carpooling), shopping less at fast fashion stores (shop at thrift stores or sustainable fashion shops), using less plastic (use metal straws, canvas tote bags), and consuming local foods are ways to reduce this footprint. </p>
 		</div>
 		
 	</div>
