--- a/medp341-midterm/app/dev/html/what-to-do.html
+++ b/medp341-midterm/app/dev/html/what-to-do.html
@@ -9,14 +9,14 @@
 <body>
 	<h1 id="header">THE CLIMATE PHENOMENON</h1>
 	<h2>WHAT CAN YOU DO?</h2>
-	<p></p>
+	<p>Sometimes, you may think that one person (aka you) cannot make a difference. However, studies have show that when one person makes a sustainable choice, others follow. Essentially, there is this ripple effect that takes place, whereby one constantly evaluates the other’s doings and adjusts their beliefs and actions accordingly. Below you will find ways that you can act on climate change.</p>
 	<div class="flex-container">
 		<div class="box-content">
-			<h3> Keep yourself and others educated</h3> 
+			<h3> Keep Yourself and Others Educated</h3> 
 			<p>It is important to stay up to date with what is happening with climate change and to stay far away from shows, personalities, and companies that constantly rebuke climate change is real. Moreover, it is vital to try to educate others on the causes and consequences of climate change. Try watching documentaries, reading books/journals, and utilizing tools that NASA and other organizations provide. </p>
 		</div>
 		<div class="box-content">
-			<h3>Throw Way Less</h3>
+			<h3>Throw Away Less</h3>
 			<p> Metals, glass, paper, and plastic can be recycled. These products are not biodegradable, so can remain in landfills for centuries , all while emitting greenhouse gases. Moreover, the energy that goes into manufacturing products like plastic goes to no use if simply discarded in landfills. Recycling allows to save natural resources: recycled office paper saves 17 tress, 7,000 gallons of water, 463 gallons of oil; recycled plastic saves 16.3 barrels of oil.</p>
 		</div>
 	</div>
@@ -26,7 +26,7 @@
 			<p>So you might not be able to cut back and make all the necessary changes. But, you can donate to organizations that are putting up the bigger fight. This is certainly not a “freebie” card, but just another tool in your toolbox to fight against climate change. Consider donating to World Wildlife Fund, the Sierra Club, Global Footprint Network, etc. </p>
 		</div>
 		<div class="box-content">
-			<h3>Reduce your Carbon Footprint</h3>
+			<h3>Reduce Your Carbon Footprint</h3>
 			<p>A carbon footprint is basically the total greenhouse gases produced indirectly or directly by someone or something. So as individuals, based on what we do and consume, we have a carbon footprint. Driving less (taking public transportation, biking, carpooling), shopping less at fast fashion stores (shop at thrift stores or sustainable fashion shops), using less plastic (use metal straws, canvas tote bags), and consuming local foods are ways to reduce this footprint. </p>
 		</div>
 		
