fixed file pathf or nav bar

--- a/medp341-midterm/app/dev/html/countries-affected.html
+++ b/medp341-midterm/app/dev/html/countries-affected.html
@@ -9,9 +9,9 @@
 <body>
 	<h1 id="header">THE CLIMATE PHENOMENON</h1>
 	<ul class="nav">
-		<li><a href=“index.html”>Home</a></li>
-		<li><a href=“html/countries-affected.html”>Countries Affected</a></li>
-		<li><a href=“html/what-to-do.html”>What Can You Do</a></li>
+		<li><a href="../index.html">Home</a></li>
+		<li><a href="countries-affected.html">Countries Affected</a></li>
+		<li><a href="what-to-do.html">What Can You Do</a></li>
 	</ul>
 	<h2>COUNTRIES AFFECTED</h2>
 	<p>Climate change affects us all in various ways. However, some countries take the bigger hit depending on their geographic location and economic status. Below we highlighted some countries that have been affected by climate change whether that we through extreme weather or ecosystem destruction. Click through the countries to get some facts and interactive play.  </p>
