--- a/medp341-midterm/app/dev/html/what-to-do.html
+++ b/medp341-midterm/app/dev/html/what-to-do.html
@@ -9,9 +9,9 @@
 <body>
 	<h1 id="header">THE CLIMATE PHENOMENON</h1>
 	<ul class="nav">
-		<li><a href=“index.html”>Home</a></li>
-		<li><a href=“html/countries-affected.html”>Countries Affected</a></li>
-		<li><a href=“html/what-to-do.html”>What Can You Do</a></li>
+		<li><a href="../index.html">Home</a></li>
+		<li><a href="countries-affected.html">Countries Affected</a></li>
+		<li><a href="what-to-do.html">What Can You Do</a></li>
 	</ul>
 	<h2>WHAT CAN YOU DO?</h2>
 	<p>Sometimes, you may think that one person (aka you) cannot make a difference. However, studies have show that when one person makes a sustainable choice, others follow. Essentially, there is this ripple effect that takes place, whereby one constantly evaluates the other’s doings and adjusts their beliefs and actions accordingly. Below you will find ways that you can act on climate change.</p>
