--- a/medp341-midterm/app/dev/index.html
+++ b/medp341-midterm/app/dev/index.html
@@ -11,7 +11,7 @@
 	<ul class="nav">
 		<li><a href="index.html">Home</a></li>
 		<li><a href="html/countries-affected.html">Countries Affected</a></li>
-		<li><a href="html/what-to-do.html">What Can You Do</a></li>
+		<li><a href="html/what-to-do.html">What You Can Do</a></li>
 	</ul>
 	<h2>CLIMATE CHANGE - THE BASICS</h2>
 	<p>According to NASA, climate change is “a long-term change in the average weather patterns that have come to define Earth’s local, regional and global climates.” During and after the Industrial Revolution, there has been a surge of climate change drive by human activities. The main activity is the burning of fossil fuels, which in turn allows the “greenhouse effect” to occur. The “greenhouse effect” traps heat within the Earth’s atmosphere causing the global temperature increase. Due to this change a number of effects are taking place, such as ocean and land temperature increases, ice melting, and variability is extreme weather (think hurricanes, droughts, floods, wildfires). Take a look at the video below that discusses "Climate 101: Causes and Changes". </p>
