--- a/medp341-midterm/app/dev/html/countries-affected.html
+++ b/medp341-midterm/app/dev/html/countries-affected.html
@@ -11,7 +11,7 @@
 	<ul class="nav">
 		<li><a href="../index.html">Home</a></li>
 		<li><a href="countries-affected.html">Countries Affected</a></li>
-		<li><a href="what-to-do.html">What Can You Do</a></li>
+		<li><a href="what-to-do.html">What You Can Do</a></li>
 	</ul>
 	<h2>COUNTRIES AFFECTED</h2>
 	<p>Climate change affects us all in various ways. However, some countries take the bigger hit depending on their geographic location and economic status. Below we highlighted some countries that have been affected by climate change whether that we through extreme weather or ecosystem destruction. Click through the countries to get some facts and interactive play.  </p>
