added content + layout t

--- a/medp341-midterm/app/dev/brazil.html
+++ b/medp341-midterm/app/dev/brazil.html
@@ -4,7 +4,7 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-   <title>Climate Change</title>
+   <title>Brazil</title>
 
    <link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
 
@@ -28,13 +28,37 @@
    <script src="/scripts/flock.js"></script>
    <script src="/scripts/index.js"></script>
    
-   <link rel="stylesheet" href="/css/home.css">
+   <link rel="stylesheet" href="css/style.css">
 
 </head>
 <body>
    <div class="container" >
        <a href="/">Home</a>
       <h1>Landing page test</h1>
+   </div>
+   <h1 id="header">THE CLIMATE PHENOMENON</h1>
+   <ul class="nav">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="html/countries-affected.html">Countries Affected</a></li>
+      <li><a href="html/what-to-do.html">What You Can Do</a></li>
+   </ul>
+   <h2>BRAZIL</h2>
+   <div class="flex-container">
+      <div class="box-content">
+         <h3>temp animation goes here</h3>
+      </div>
+      <div class="box-content">
+         <p>Rainfall patterns could change drastically, increasing by up to 30 percent in the south and south-east of the country, while diminishing by up to 40 percent in the north and north-east. This turbulent change will cause agricultural changes as well. </p>
+      </div>
+   </div>
+   <div class="flex-container">
+      <div class="box-content">
+        <p>Brazil has one of the cleanest electricity portfolios in the world (~65% of its electrify comes from hydropower power and ~15% comes from wind, solar, and biomass). Moreover, Brazil has managed to promote clean transport and conversation. However, due to the newly elected president, this comes under threat given that environmental protection is not his priority, but actually his opposition.</p>
+      </div>
+      <div class="box-content">
+         <h3>p5 thing goes here</h3>
+         <p>The blue macaw in Brazil has, unfortunately, gone extinct in the wild. This is due to deforestation and illegal trade.</p>
+      </div>
    </div>
 </body>
 </html>
