--- a/medp341-midterm/app/dev/html/countries-affected.html
+++ b/medp341-midterm/app/dev/html/countries-affected.html
@@ -17,22 +17,22 @@
 	<p>Climate change affects us all in various ways. However, some countries take the bigger hit depending on their geographic location and economic status. Below we highlighted some countries that have been affected by climate change whether that we through extreme weather or ecosystem destruction. Click through the countries to get some facts and interactive play.  </p>
 	<div class="flex-container">
 		<div class="box">
-			<img src="../images/brazil.png" alt="brazil map" width="260px">
-			<h3 class="country-name">Brazil</h3>
+			<a href="../brazil.html"><img src="../images/brazil.png" alt="brazil map" width="260px"></a>
+			<a href="../brazil.html"><h3 class="country-name">Brazil</h3></a>
 		</div>
 		<div class="box">
-			<img src="../images/india.png" alt="india map" width="260px">
-			<h3 class="country-name">India</h3>
+			<a href="../india.html"><img src="../images/india.png" alt="india map" width="260px"></a>
+			<a href="../india.html"><h3 class="country-name">India</h3></a>
 		</div>
 	</div>
 	<div class="flex-container">
 		<div class="box">
-			<img src="../images/drc.png" alt="democratic republic of congo map" width="260px">
-			<h3 class="country-name">Democratic Republic of Congo</h3>
+			<a href="../congo.html"><img src="../images/drc.png" alt="democratic republic of congo map" width="260px"></a>
+			<a href="../congo.html"><h3 class="country-name">Democratic Republic of Congo</h3></a>
 		</div>
 		<div class="box">
-			<img src="../images/australia.png" alt="australia map" width="260px">
-			<h3 class="country-name">Australia</h3>
+			<a href="../australia.html"><img src="../images/australia.png" alt="australia map" width="260px"></a>
+			<a href="../australia.html"><h3 class="country-name">Australia</h3></a>
 		</div>
 	</div>
 </body>
