--- a/medp341-midterm/app/dev/brazil.html
+++ b/medp341-midterm/app/dev/brazil.html
@@ -32,10 +32,6 @@
 
 </head>
 <body>
-   <div class="container" >
-       <a href="/">Home</a>
-      <h1>Landing page test</h1>
-   </div>
    <h1 id="header">THE CLIMATE PHENOMENON</h1>
    <ul class="nav">
       <li><a href="index.html">Home</a></li>
@@ -48,11 +44,13 @@
          <h3>temp animation goes here</h3>
       </div>
       <div class="box-content">
+         <h3>Rainfall</h3>
          <p>Rainfall patterns could change drastically, increasing by up to 30 percent in the south and south-east of the country, while diminishing by up to 40 percent in the north and north-east. This turbulent change will cause agricultural changes as well. </p>
       </div>
    </div>
    <div class="flex-container">
       <div class="box-content">
+         <h3>Changes of Governemnt</h3>
         <p>Brazil has one of the cleanest electricity portfolios in the world (~65% of its electrify comes from hydropower power and ~15% comes from wind, solar, and biomass). Moreover, Brazil has managed to promote clean transport and conversation. However, due to the newly elected president, this comes under threat given that environmental protection is not his priority, but actually his opposition.</p>
       </div>
       <div class="box-content">
