--- a/medp341-midterm/app/dev/australia.html
+++ b/medp341-midterm/app/dev/australia.html
@@ -37,9 +37,31 @@
 
 </head>
 <body>
-   <div class="container" >
-       <a href="/">Home</a>
-      <h1>Landing page test</h1>
+    <h1 id="header">THE CLIMATE PHENOMENON</h1>
+   <ul class="nav">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="html/countries-affected.html">Countries Affected</a></li>
+      <li><a href="html/what-to-do.html">What You Can Do</a></li>
+   </ul>
+   <h2>AUSTRALIA</h2>
+   <div class="flex-container">
+      <div class="box-content">
+         <h3>temp animation goes here</h3>
+      </div>
+      <div class="box-content">
+         <h3>Bush Fires</h3>
+         <p>Fire season in Australia  now runs for nine months out of the year. Alarmingly, in November 2018, Queensland had about 200 fires! Moreover, due to this, agriculture (like wine grapes and carrots) will be less viable. </p>
+      </div>
+   </div>
+   <div class="flex-container">
+      <div class="box-content">
+         <h3>The Great Barrier Reef</h3>
+        <p>The Great Barrier Reef, larger than the Wall of China and the colorful living thing that can be seen from outer space, is nearly dead. The Reef is being hit by the warmer temperature and by acidification, which occurs when the carbon dioxide dissolves to form carbonic acid. This acidification disrupts the delicate pH that many organisms need to thrive. In the case of the Reef, it causes “coral bleaching,” which may be a straight path to the death of the corals and the marine life that depends on it. </p>
+      </div>
+      <div class="box-content">
+         <h3>p5 thing goes here</h3>
+         <p>A rise in sea level and surface temperature will impact how sea turtles reproduce. Because sea turtles remember the place where they hatched, they will often return to that place to do their nesting ritual. However, they might not be able to find this place anymore. Moreover, the sea level rise will inevitably wash away some the turtles’ eggs. In addition, the sex of the embryos is partially determined by the surface temperature. In this case, a warmer environment leads to a higher percentage of females, which will create a significant threat to genetic diversity.</p>
+      </div>
    </div>
 </body>
 </html>
