--- a/medp341-midterm/app/dev/australia.html
+++ b/medp341-midterm/app/dev/australia.html
@@ -33,7 +33,7 @@
    <script src="/scripts/flock.js"></script>
    <script src="/scripts/index.js"></script>
    
-   <link rel="stylesheet" href="/css/home.css">
+   <link rel="stylesheet" href="/css/style.css">
 
 </head>
 <body>
