added icons + styling

--- a/medp341-midterm/app/dev/brazil.html
+++ b/medp341-midterm/app/dev/brazil.html
@@ -45,17 +45,17 @@
       </div>
       <div class="box-content">
          <h3>Rainfall</h3>
-         <p>Rainfall patterns could change drastically, increasing by up to 30 percent in the south and south-east of the country, while diminishing by up to 40 percent in the north and north-east. This turbulent change will cause agricultural changes as well. </p>
+         <p class="explanation">Rainfall patterns could change drastically, increasing by up to 30 percent in the south and south-east of the country, while diminishing by up to 40 percent in the north and north-east. This turbulent change will cause agricultural changes as well. </p>
       </div>
    </div>
    <div class="flex-container">
       <div class="box-content">
          <h3>Changes of Governemnt</h3>
-        <p>Brazil has one of the cleanest electricity portfolios in the world (~65% of its electrify comes from hydropower power and ~15% comes from wind, solar, and biomass). Moreover, Brazil has managed to promote clean transport and conversation. However, due to the newly elected president, this comes under threat given that environmental protection is not his priority, but actually his opposition.</p>
+         <p class="explanation">Brazil has one of the cleanest electricity portfolios in the world (~65% of its electrify comes from hydropower power and ~15% comes from wind, solar, and biomass). Moreover, Brazil has managed to promote clean transport and conversation. However, due to the newly elected president, this comes under threat given that environmental protection is not his priority, but actually his opposition.</p>
       </div>
       <div class="box-content">
          <h3>p5 thing goes here</h3>
-         <p>The blue macaw in Brazil has, unfortunately, gone extinct in the wild. This is due to deforestation and illegal trade.</p>
+         <p class="explanation">The blue macaw in Brazil has, unfortunately, gone extinct in the wild. This is due to deforestation and illegal trade.</p>
       </div>
    </div>
 </body>
