added webpage layout

--- a/medp341-midterm/app/dev/congo.html
+++ b/medp341-midterm/app/dev/congo.html
@@ -40,9 +40,32 @@
 
 </head>
 <body>
-   <div class="container" >
-       <a href="/">Home</a>
-      <h1>Landing page test</h1>
+   <h1 id="header">THE CLIMATE PHENOMENON</h1>
+   <ul class="nav">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="html/countries-affected.html">Countries Affected</a></li>
+      <li><a href="html/what-to-do.html">What You Can Do</a></li>
+   </ul>
+   <h2>DEMOCRATIC REPUBLIC OF CONGO</h2>
+   <div class="flex-container">
+      <div class="box-content">
+         <h3>temp animation goes here</h3>
+      </div>
+      <div class="box-content">
+         <h3>jsdjsal</h3>
+         <p class="explanation">sjdfslkajlkdjkjlksfjsjdlkasjda </p>
+      </div>
+   </div>
+   <div class="flex-container">
+      <div class="box-content">
+         <h3>sjdhkaldjklasdt</h3>
+         <p class="explanation">sdjalksdjaskldjakdjal</p>
+      </div>
+      <div class="box-content">
+         <h3>p5 thing goes here</h3>
+         <p class="explanation">sjdsakdjalksjdasd</p>
+      </div>
+   </div>
 
 
       <div class="">
