--- a/medp341-midterm/app/dev/india.html
+++ b/medp341-midterm/app/dev/india.html
@@ -49,14 +49,17 @@
          <h3>temp animation goes here</h3>
       </div>
       <div class="box-content">
-         <h3>jsdjsal</h3>
-         <p class="explanation">sjdfslkajlkdjkjlksfjsjdlkasjda </p>
+         <h3>Heatwave</h3>
+         <img src="../images/heatwave.png" class="image-icons" alt="coral reef" width="200">
+         <p class="explanation">Due to the higher temperatures each year, record-breaking heatwaves have become a regular occurrence in India. These heatwaves mostly affect the poor people living in India, often causing heatstrokes, dizziness, heartaches, increased blood pressure and ultimately killing thousands.  </p>
       </div>
    </div>
    <div class="flex-container">
       <div class="box-content">
-         <h3>sjdhkaldjklasdt</h3>
-         <p class="explanation">sdjalksdjaskldjakdjal</p>
+         <h3>Flooding</h3>
+         <img src="../images/flood.png" class="image-icons" alt="coral reef" width="200">
+         <p class="explanation">Sea level rise will have a horrible impact on the country due to its large coastline, and the number of people who live close to and depend on the sea for their livelihoods. Floods that are to be considered one in a century, could happen 10 times a year by 2020 says a scientist, which would cause a higher death toll. Moreover, the sudden floods is detrimental to animals, like tigers, who will no longer be able to live in their habitats. 
+</p>
       </div>
       <div class="box-content">
          <h3>p5 thing goes here</h3>
