--- a/medp341-midterm/app/dev/congo.html
+++ b/medp341-midterm/app/dev/congo.html
@@ -52,8 +52,8 @@
          <h3>temp animation goes here</h3>
       </div>
       <div class="box-content">
-         <h3>jsdjsal</h3>
-         <p class="explanation">sjdfslkajlkdjkjlksfjsjdlkasjda </p>
+         <h3>Congo Basin</h3>
+         <p class="explanation">According to the UNESCO, a national park in DRC, Salonga National Park, is the only habitat for many endangered species, including the dwarf chimpanzee (bonobo), the Congo peacock, the forest elephant, and the African slender-snouted or "false" crocodile. Due to climate change, the basin in which this park is located is becoming warmer and drier. This change could lead to the loss of seven species of mammals by 2050 and nineteen species by 2080, according to a study done by Wilfried Thriller et al. </p>
       </div>
    </div>
    <div class="flex-container">
