added thar explanation

--- a/medp341-midterm/app/dev/india.html
+++ b/medp341-midterm/app/dev/india.html
@@ -63,7 +63,7 @@
       </div>
       <div class="box-content">
          <h3>p5 thing goes here</h3>
-         <p class="explanation">sjdsakdjalksjdasd</p>
+         <p class="explanation">A new study conducted to model the futre of the Nilgiri thar in response to climate change has shown that around 60% of the tahr would be inhabitable. Moreover, before 1950, the tahr were widespread over the Western Ghats, since then only about 3000 that remain (which is about 10% of their former population).</p>
       </div>
    </div>
 </body>
