added gorilla explanation

--- a/medp341-midterm/app/dev/congo.html
+++ b/medp341-midterm/app/dev/congo.html
@@ -63,7 +63,7 @@
       </div>
       <div class="box-content">
          <h3>p5 thing goes here</h3>
-         <p class="explanation">sjdsakdjalksjdasd</p>
+         <p class="explanation">While mountain gorillas have managed to adapt to changes in their environment, some of their traits still make them vulnerable to climate change. According to the World Wildlife Fund, “their population is very small and their range highly restricted. A limited dispersal ability (due to human settlements), coupled with a long generation time, a low reproductive rate, low amounts of genetic variation, [and susceptibility to disease], will limit the ability of the species to adapt to a changing climate.” </p>
       </div>
    </div>
 
