added livelihood explanation

--- a/medp341-midterm/app/dev/congo.html
+++ b/medp341-midterm/app/dev/congo.html
@@ -58,8 +58,8 @@
    </div>
    <div class="flex-container">
       <div class="box-content">
-         <h3>sjdhkaldjklasdt</h3>
-         <p class="explanation">sdjalksdjaskldjakdjal</p>
+         <h3>Livelihoods</h3>
+         <p class="explanation">A large amount of Congolese livelihoods, like small-scale agriculture, forestry, fisheries, and mining, are linked to climate changes, which inevitable leads them to be threatened. An example provided by the US Agency of International Development, states that “changes in temperatures and rainfall may affect crop production and alter biodiversity and ecosystem resources.” This threats could possibly lead to even more widespread economic instability. </p>
       </div>
       <div class="box-content">
          <h3>p5 thing goes here</h3>
