added congo contents

--- a/medp341-midterm/app/dev/congo.html
+++ b/medp341-midterm/app/dev/congo.html
@@ -53,12 +53,14 @@
       </div>
       <div class="box-content">
          <h3>Congo Basin</h3>
+         <img src="../images/forest.png" class="image-icons" alt="congo basin forest" width="200">
          <p class="explanation">According to the UNESCO, a national park in DRC, Salonga National Park, is the only habitat for many endangered species, including the dwarf chimpanzee (bonobo), the Congo peacock, the forest elephant, and the African slender-snouted or "false" crocodile. Due to climate change, the basin in which this park is located is becoming warmer and drier. This change could lead to the loss of seven species of mammals by 2050 and nineteen species by 2080, according to a study done by Wilfried Thriller et al. </p>
       </div>
    </div>
    <div class="flex-container">
       <div class="box-content">
          <h3>Livelihoods</h3>
+         <img src="../images/livelihood.png" class="image-icons" alt="livelihood" width="200">
          <p class="explanation">A large amount of Congolese livelihoods, like small-scale agriculture, forestry, fisheries, and mining, are linked to climate changes, which inevitable leads them to be threatened. An example provided by the US Agency of International Development, states that “changes in temperatures and rainfall may affect crop production and alter biodiversity and ecosystem resources.” This threats could possibly lead to even more widespread economic instability. </p>
       </div>
       <div class="box-content">
