added australia audio

--- a/medp341-midterm/app/dev/australia.html
+++ b/medp341-midterm/app/dev/australia.html
@@ -65,5 +65,6 @@
          <p class="explanation">A rise in sea level and surface temperature will impact how sea turtles reproduce. Because sea turtles remember the place where they hatched, they will often return to that place to do their nesting ritual. However, they might not be able to find this place anymore. Moreover, the sea level rise will inevitably wash away some the turtles’ eggs. In addition, the sex of the embryos is partially determined by the surface temperature. In this case, a warmer environment leads to a higher percentage of females, which will create a significant threat to genetic diversity.</p>
       </div>
    </div>
+   <audio src="../audio/underwater.mp3" autobuffer autoloop loop controls autoplay></audio>
 </body>
 </html>
