added audio to countries

--- a/medp341-midterm/app/dev/brazil.html
+++ b/medp341-midterm/app/dev/brazil.html
@@ -60,5 +60,6 @@
          <p class="explanation">The blue macaw in Brazil has, unfortunately, gone extinct in the wild. This is due to deforestation and illegal trade.</p>
       </div>
    </div>
+   <audio src="../audio/rainforest.mp3" autobuffer autoloop loop controls autoplay></audio>
 </body>
 </html>
