--- a/medp341-midterm/app/dev/india.html
+++ b/medp341-midterm/app/dev/india.html
@@ -59,12 +59,13 @@
          <h3>Flooding</h3>
          <img src="../images/flood.png" class="image-icons" alt="coral reef" width="200">
          <p class="explanation">Sea level rise will have a horrible impact on the country due to its large coastline, and the number of people who live close to and depend on the sea for their livelihoods. Floods that are to be considered one in a century, could happen 10 times a year by 2020 says a scientist, which would cause a higher death toll. Moreover, the sudden floods is detrimental to animals, like tigers, who will no longer be able to live in their habitats. 
-</p>
+         </p>
       </div>
       <div class="box-content">
          <h3>p5 thing goes here</h3>
          <p class="explanation">A new study conducted to model the futre of the Nilgiri thar in response to climate change has shown that around 60% of the tahr would be inhabitable. Moreover, before 1950, the tahr were widespread over the Western Ghats, since then only about 3000 that remain (which is about 10% of their former population).</p>
       </div>
    </div>
+   <audio src="../audio/mountains.mp3" autobuffer autoloop loop controls autoplay></audio>
 </body>
 </html>
